# powerflow

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  auto-imports.d.ts  bump.config.ts  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  popover.html  settings.html  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
.sqlx/: query-24374ea5ffd7a494d251d111c562269af76ad13c8838e7c4fa32b02fd4dfb94c.json  query-73ecd25177eb15025e60f839d8ebfd2af019ea472462269fef4f484348b5dc76.json  query-82f22bc0229e37e746d81aa9846c5762638e0d9aab772ee4df48c679f7ba7150.json  query-a0b07c7cc11adcce9c4cfee4730679b2a8374b2cec3e19ccc79a9cb645ec0556.json  query-e7aa427f15c356ba06247a76c1fabf64baf792f1b223df51b5fabd5af4367284.json
crates/tpower/: Cargo.toml  build.rs
crates/tpower/src/: de.rs  lib.rs  macros.rs  util.rs
crates/tpower/src/ffi/: mod.rs  smc.rs  wrapper.rs
crates/tpower/src/provider/: local.rs  mod.rs  remote.rs
locales/: en.yaml  zh-CN.yaml
src/: App.vue  Popover.vue  Settings.vue  bindings.ts  main.ts  popover.ts  settings.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Tauri.toml  tarui.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20241231010325_create_initial_tables.sql  20250104055910_add_name_with_udid.sql  20250106111532_add_adapter_info.sql
src-tauri/src/: data.rs  database.rs  device.rs  event.rs  ext.rs  history.rs  lib.rs  local.rs  main.rs  menu.rs  tray_icon.rs  util.rs
src/assets/: index.css
src/components/: ChartTooltip.vue  CommonTooltip.vue  MainContent.vue  PowerAnalytics.vue  PowerFlow.vue  PowerStatus.vue  PowerUsageChart.vue  Shimmer.vue  TechnicalDetail.vue  TitleBar.vue
src/components/chart/: CustomChartTooltip.vue  PowerUsageChart.vue
src/components/history/: HistoryDetail.vue  HistoryListItem.vue
src/components/status/: PowerStatus.vue  PowerStatusBar.vue  PowerStatusDescription.vue  PowerStatusFooter.vue  PowerStatusNumber.vue  PowerStatusPopover.vue  PowerStatusTitle.vue
src/components/ui/chart/: ChartLegend.vue
src/components/ui/chart-line/: LineChart.vue
src/components/ui/tabs/: Tabs.vue  TabsList.vue  TabsTrigger.vue
src/composables/: index.ts  useHistory.ts  usePower.ts  usePowerHistory.ts  useSetup.ts  useTab.ts  useTitlebar.ts
src/lib/: format.ts  i18n.ts  setup.ts
src/pages/: History.vue  MainContent.vue
src/stores/: preference.ts
