[package]
name = "powerflow"
version = "0.2.1"
description = "Monitoring power usage of mac and iOS devices"
authors = [ "Samuel Lyon" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "powerflow_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[features]
# for disabling waring from `objc` crate
default = [ "cargo-clippy" ]
cargo-clippy = []

[build-dependencies]
tauri-build = { version = "2", features = [ "config-toml" ] }

[dependencies]
tpower = { features = [ "specta" ], workspace = true }
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "devtools",
] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2.0.0", features = [ "tray-icon" ] }
tauri-plugin-notification = "2"
tauri-plugin-pinia = "0.10"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", branch = "tauri-beta/v2", version = "3.0.0" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1.42.0", features = [ "full" ] }
specta = { version = "=2.0.0-rc.20", features = [
  "chrono",
  "serde",
  "serde_json"
] }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = [
  "derive",
  "typescript"
] }
strum = "0.26.3"
objc2 = "0.5.2"
objc2-app-kit = "0.2.2"
objc2-foundation = "0.2.2"
log = "0.4.22"
thiserror = "2.0.9"
scopefn = "0.0.2"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "runtime-tokio",
  "sqlite"
] }
bincode = "1.3.3"
chrono = { version = "0.4.39", features = [ "serde" ] }
derive_more = { version = "1.0.0", features = [ "deref" ] }
cocoa = "0.26.0"
objc = "0.2.7"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
