[package]
name = "tpower"
version = "0.2.2"
edition = "2021"

[features]
specta = [
  "dep:specta",
  "dep:specta-typescript"
]

[dependencies]
core-foundation = "0.10.0"
libc = "0.2.168"
mach = "0.3.2"
scopefn = { version = "0.0.2", features = [ "run_if" ] }
ratatui = "0.29.0"
crossterm = "0.28.1"
thiserror = "2.0.6"
log = "0.4.22"
log4rs = "1.3.0"
io-kit-sys = "0.4.1"
anyhow = "1.0.94"
humantime = "2.1.0"
indexmap = "2.7.0"
plist = "1.7.0"
serde = { version = "1.0.216", features = [ "derive" ] }
specta = { optional = true, version = "=2.0.0-rc.20", features = [
  "serde",
  "serde_json",
  "derive",
] }
specta-typescript = { optional = true, version = "0.0.7" }
derive_more = { version = "1.0.0", features = [
  "add",
  "mul"
] }
